--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,13 +64,13 @@
    "source": [
     "import pandas as pd\n",
     "import pickle\n",
-    "import utils\n",
+    "import read_database\n",
     "\n",
     "from_database = True\n",
     "\n",
     "if from_database:\n",
     "    # Load tables from database \n",
-    "    dfs = utils.load_all_tables()\n",
+    "    dfs = read_database.load_all_tables()\n",
     "else:\n",
     "    # Open the file in binary read mode and load the pickle data\n",
     "    with open('preprocessed_data/dfs.pickle', 'rb') as f:\n",
