--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -8,13 +8,13 @@
    "source": [
     "import pandas as pd\n",
     "import pickle\n",
-    "import read_database\n",
+    "import preprocess_utils\n",
     "\n",
     "from_database = False\n",
     "\n",
     "if from_database:\n",
     "    # Load tables from database \n",
-    "    dfs = read_database.load_all_tables()\n",
+    "    dfs = preprocess_utils.load_all_tables()\n",
     "else:\n",
     "    # Open the file in binary read mode and load the pickle data\n",
     "    with open('preprocessed_data/dfs.pickle', 'rb') as f:\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -59,118 +59,69 @@
       "['article_id', 'assertion_type_id', 'assessment_type_id', 'journal_id']\n",
       "['article_id']\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(col, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(col, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(col, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(col, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(col, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(col, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(col, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(cols, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(cols, axis=1, inplace=True)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/3914079012.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df.drop(cols, axis=1, inplace=True)\n"
-     ]
     }
    ],
    "source": [
     "def clean_df(df):\n",
+    "    # Create a copy of the DataFrame at the start\n",
+    "    df = df.copy()\n",
+    "    \n",
     "    columns_to_remove = ['user_id', 'orcid_user_id', \n",
     "                    'created_at', 'updated_at', 'assertion_updated_at', \n",
     "                    'workspace_id', 'user_id', 'doi', 'organism_id', # 'pmid', \n",
     "                    'all_tags_json', 'obsolete', 'ext', 'badge_classes','pluralize_title',\n",
     "                    'can_attach_file', 'refresh_side_panel', 'icon_classes', 'btn_classes']\n",
     "    patterns_to_remove = ['validated', 'filename', 'obsolete_article']\n",
-    "    for col in columns_to_remove:\n",
-    "        if col in df.columns:\n",
-    "            df.drop(col, axis=1, inplace=True)\n",
+    "    \n",
+    "    # Remove existing columns\n",
+    "    existing_cols = [col for col in columns_to_remove if col in df.columns]\n",
+    "    if existing_cols:\n",
+    "        df = df.drop(existing_cols, axis=1)\n",
+    "    \n",
+    "    # Remove pattern-matched columns\n",
+    "    pattern_cols = []\n",
     "    for pattern in patterns_to_remove:\n",
-    "        cols = [c for c in df.columns if pattern in c]\n",
-    "        df.drop(cols, axis=1, inplace=True)\n",
+    "        pattern_cols.extend([c for c in df.columns if pattern in c])\n",
+    "    if pattern_cols:\n",
+    "        df = df.drop(pattern_cols, axis=1)\n",
+    "    \n",
     "    return df\n",
     "\n",
-    "\n",
-    "\n",
-    "# preprocess: my unit here is the claims that are in assertion\n",
-    "# check wich columns have _id\n",
-    "claims = dfs[\"assertions\"]\n",
+    "# Main processing\n",
+    "claims = dfs[\"assertions\"].copy()\n",
     "print(len(claims))\n",
-    "claims = claims[claims[\"obsolete\"] == False]\n",
+    "claims = claims[claims[\"obsolete\"] == False].copy()\n",
     "print(len(claims))\n",
     "claims = clean_df(claims)\n",
     "\n",
     "id_cols = [col for col in claims.columns if \"_id\" in col]\n",
     "print(id_cols)\n",
-    "# merge the article columsn\n",
+    "\n",
+    "# Process articles\n",
     "articles = clean_df(dfs[\"articles\"])\n",
     "articles = articles.rename(columns={\"id\": \"article_id\"})\n",
-    "# We keep article ID for later\n",
-    "claims = claims.merge(articles, on=\"article_id\", how=\"left\", suffixes=('', '_article'))#.drop(\"article_id\", axis=1)\n",
-    "\n",
+    "claims = claims.merge(articles, on=\"article_id\", how=\"left\", suffixes=('', '_article'))\n",
     "\n",
     "id_cols = [col for col in claims.columns if \"_id\" in col]\n",
     "print(id_cols)\n",
     "\n",
+    "# Process journals\n",
     "journals = clean_df(dfs[\"journals\"])\n",
     "journals = journals.drop('tag', axis=1).rename(columns={\"id\": \"journal_id\", \"name\": \"journal_name\"})\n",
     "claims = claims.merge(journals, on=\"journal_id\", how=\"left\", suffixes=('', '_journal')).drop(\"journal_id\", axis=1)\n",
     "\n",
-    "# same for assertion_type\n",
+    "# Process assertion types\n",
     "assertion_types = clean_df(dfs[\"assertion_types\"])\n",
     "assertion_types = assertion_types.rename(columns={\"id\": \"assertion_type_id\", \"name\": \"assertion_type\"})\n",
     "claims = claims.merge(assertion_types, on=\"assertion_type_id\", how=\"left\", suffixes=('', '_assertion_type')).drop(\"assertion_type_id\", axis=1)\n",
     "\n",
-    "# same for assessment_type_id\n",
+    "# Process assessment types\n",
     "assessment_types = clean_df(dfs[\"assessment_types\"])\n",
     "assessment_types = assessment_types.rename(columns={\"id\": \"assessment_type_id\", \"name\": \"assessment_type\"})\n",
     "claims = claims.merge(assessment_types, on=\"assessment_type_id\", how=\"left\", suffixes=('', '_assessment_type')).drop(\"assessment_type_id\", axis=1)\n",
     "\n",
     "id_cols = [col for col in claims.columns if \"_id\" in col]\n",
-    "print(id_cols)\n"
+    "print(id_cols)"
    ]
   },
   {
@@ -185,28 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/4165477742.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  claims[claims[\"journal_name\"] == \"Proceedings. Biological sciences\"][\"impact_factor\"] = 4.7\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_55150/4165477742.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  claims[claims[\"journal_name\"] == \"Proceedings. Biological sciences\"][\"journal_name\"] = \"Proceedings Biological Sciences\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Update impact factor for \"Proceedings. Biological sciences\" and standardize the journal name\n",
     "claims.loc[claims[\"journal_name\"] == \"Proceedings. Biological sciences\", \"impact_factor\"] = 4.7 \n",
@@ -694,6 +626,191 @@
     "# Save truncated dataframe\n",
     "df_truncated.to_csv('preprocessed_data/claims_truncated_for_llm.csv', index=False)\n",
     "df_truncated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Preprocess the author files\n",
+    "### A. Last authors\n",
+    " It seems that\n",
+    " - sex -> FH\n",
+    " - PhD Post-doc -> FH\n",
+    " - Become a Pi -> FH\n",
+    " - current job -> FH\n",
+    " - MD -> **???**\n",
+    " - Affiliation -> Both\n",
+    " - Country -> Both\n",
+    " - Ivy League -> Both"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read an xlx file in pandas\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import  preprocess_utils\n",
+    "\n",
+    "claims_df = pd.read_csv('preprocessed_data/claims_truncated_for_llm.csv')\n",
+    "major_claims_df = claims_df[claims_df['assertion_type'] == 'major_claim']\n",
+    "\n",
+    "# Read Author info, which contains all the pairs\n",
+    "paper_auth_pairs = pd.read_excel('input_data/2025-02-14_last_xlsx/1_Triage_Last author.xlsx', sheet_name='Tri sans les doublons')\n",
+    "# Drop all columns with 'Unnamed' in the name\n",
+    "paper_auth_pairs = paper_auth_pairs.drop(columns=[col for col in paper_auth_pairs.columns if 'Unnamed' in col]).drop(columns=['Source'])\n",
+    "paper_auth_pairs.to_csv('input_data/2025-02-14_last_xlsx/1_Triage_Last author.csv', index=False)\n",
+    "\n",
+    "first_authors_claims = pd.read_excel('input_data/2025-03-11/2025_March 9th_stats_author.xlsx', sheet_name='First')\n",
+    "leading_authors_claims = pd.read_excel('input_data/2025-03-11/2025_March 9th_stats_author.xlsx', sheet_name='Leading')\n",
+    "leading_authors_claims[\"Authorship\"]= \"Leading\"\n",
+    "first_authors_claims[\"Authorship\"]= \"First\"\n",
+    "\n",
+    "authors_claims = pd.concat([leading_authors_claims, first_authors_claims])\n",
+    "authors_claims['Sex'] = authors_claims['Sex'].map({1: 'Male', 0: 'Female'})\n",
+    "authors_claims = authors_claims.drop(columns=[col for col in authors_claims.columns if '%' in col])\n",
+    "authors_claims = authors_claims.drop(columns=[col for col in authors_claims.columns if 'Unnamed' in col])\n",
+    "\n",
+    "authors_claims = authors_claims.rename(columns={'Conituinity': 'Continuity', \"Partially verified\":\"Partially Verified\"})\n",
+    "\n",
+    "authors_claims['Historical lab'] = authors_claims['Historical lab'].astype('boolean')\n",
+    "authors_claims['Continuity'] = authors_claims['Continuity'].astype('boolean')\n",
+    "\n",
+    "authors_claims.to_csv('input_data/2025-02-14_last_xlsx/stats_author.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paper_auth_pairs_LH = paper_auth_pairs[[\"last author\", \"Affiliation\", \"Country\", \"Ivy league\"]]\n",
+    "paper_auth_pairs_LH = preprocess_utils.deduplicate_by(paper_auth_pairs_LH, \"last author\").copy()\n",
+    "claims_LH = authors_claims[authors_claims['Authorship'] == 'Leading'].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "159 161 164\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create merge columns: lowercased and stripped of accents\n",
+    "# For paper_auth_pairs_LH\n",
+    "paper_auth_pairs_LH.loc[:, 'lh_proc'] = paper_auth_pairs_LH['last author'].str.lower()\n",
+    "paper_auth_pairs_LH.loc[:, 'lh_proc'] = (paper_auth_pairs_LH['lh_proc']\n",
+    "    .str.normalize('NFKD')\n",
+    "    .str.encode('ascii', errors='ignore')\n",
+    "    .str.decode('utf-8'))\n",
+    "\n",
+    "# For claims_LH\n",
+    "claims_LH.loc[:, 'lh_proc'] = claims_LH['Name'].str.lower()\n",
+    "claims_LH.loc[:, 'lh_proc'] = claims_LH['lh_proc'].fillna('')\n",
+    "claims_LH.loc[:, 'lh_proc'] = (claims_LH['lh_proc']\n",
+    "    .str.normalize('NFKD')\n",
+    "    .str.encode('ascii', errors='ignore')\n",
+    "    .str.decode('utf-8'))\n",
+    "claims_LH.loc[:, 'lh_proc'] = claims_LH['lh_proc'].str.replace('ando i', 'ando')\n",
+    "\n",
+    "# Perform the merge\n",
+    "all_LH = pd.merge(claims_LH, paper_auth_pairs_LH, on='lh_proc', how='outer')\n",
+    "print(len(claims_LH), len(paper_auth_pairs_LH), len(all_LH))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💥 bellotti ra          Bellotti RA           nan\n",
+      "💥 rizki mt             RIZKI MT              nan\n",
+      "💥 shahabuddin m        Shahabuddin M         nan\n",
+      "💥 shirasu-hiza mm      Shirasu-Hiza MM       nan\n",
+      "💥 silvers mj           Silvers MJ            nan\n",
+      "💥 schneider ds+d       nan                   Schneider DS+D\n",
+      "💥 nappi aj             nan                   Nappi AJ\n",
+      "💥                      nan                   nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_pairs = all_LH[[\"Name\", \"last author\", \"lh_proc\"]].drop_duplicates().sort_values(\"last author\", ascending=True)\n",
+    "for i in range(0, len(unique_pairs)):\n",
+    "    if pd.isna(unique_pairs.iloc[i]['last author']) or pd.isna(unique_pairs.iloc[i]['Name']):\n",
+    "        print('💥 ', end='')\n",
+    "        print(f\"{unique_pairs.iloc[i]['lh_proc']:<20} {unique_pairs.iloc[i]['last author']:<20}  {unique_pairs.iloc[i]['Name']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "156\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_LH_inner = pd.merge(claims_LH, paper_auth_pairs_LH, on='lh_proc', how='inner')\n",
+    "all_LH_inner.drop(columns=['lh_proc', 'last author', 'Authorship'], inplace=True)\n",
+    "print(len(all_LH_inner))\n",
+    "all_LH_inner.to_csv('preprocessed_data/LH_inner.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### B. First authors: TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paper_auth_pairs_FH = paper_auth_pairs[[\"first author\", \"Affiliation\", \"Country\", \"Ivy league\"]] # TODO\n",
+    "paper_auth_pairs_FH = deduplicate_by(paper_auth_pairs_FH, \"first author\")\n",
+    "claims_FH = authors_claims[authors_claims['Authorship'] == 'First']\n",
+    "\n",
+    "# create merge columns: lowercased and stripped of accents\n",
+    "paper_auth_pairs_FH['fh_proc'] = paper_auth_pairs_FH['first author'].str.lower()\n",
+    "paper_auth_pairs_FH['fh_proc'] = paper_auth_pairs_FH['fh_proc'].str.normalize('NFKD').str.encode('ascii', errors='ignore').str.decode('utf-8')\n",
+    "claims_FH['fh_proc'] = claims_FH['Name'].str.lower()\n",
+    "claims_FH['fh_proc'] = claims_FH['fh_proc'].str.normalize('NFKD').str.encode('ascii', errors='ignore').str.decode('utf-8')\n",
+    "\n",
+    "all_FH = pd.merge(claims_FH, paper_auth_pairs_FH, on='fh_proc', how='outer')\n",
+    "print(len(claims_FH), len(paper_auth_pairs_FH), len(all_FH))\n",
+    "\n",
+    "unique_pairs = all_FH[[\"Name\", \"first author\", \"fh_proc\"]].drop_duplicates().sort_values(\"first author\", ascending=True)\n",
+    "for i in range(0, len(unique_pairs)):\n",
+    "    if pd.isna(unique_pairs.iloc[i]['first author']) or pd.isna(unique_pairs.iloc[i]['Name']):\n",
+    "        print('💥 ', end='')\n",
+    "        print(f\"{unique_pairs.iloc[i]['fh_proc']:<20} {unique_pairs.iloc[i]['first author']:<20}  {unique_pairs.iloc[i]['Name']}\")\n"
    ]
   }
  ],
