progress on preprocess

--- a/analysis_claims.ipynb
+++ b/analysis_claims.ipynb
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
     "to_plot = major_claims_df[[\"assertion_type\", \"label\", \"assessment_type\", \"rank_assessment_type\"]]\n",
     "fig = create_sankey_diagram(to_plot)\n",
     "fig.show()\n",
-    "fig.write_html('figures/claims_sankey.html')\n"
+    "fig.write_html('figures/claims_sankey.html')"
    ]
   }
  ],
