--- a/preprocess_db.ipynb
+++ b/preprocess_db.ipynb
@@ -1966,7 +1966,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_49028/4002741855.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Male' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_49825/4002741855.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Male' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  authors.loc[authors[\"sex\"] == 1, \"sex\"] = \"Male\"\n"
      ]
     },
@@ -2543,7 +2543,7 @@
    "source": [
     "#authors = authors.merge(articles, on=\"article_id\", how=\"left\", suffixes=('', '_article'))\n",
     "#authors.sort_values(by=[\"article_id\", \"author_id\", ])\n",
-    "\n"
+    "authors= preprocess_utils.build_author_key(authors, author_name_col=\"name\", key_col=\"author_key\")"
    ]
   },
   {
@@ -2552,24 +2552,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'author_key'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'author_key'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idr, row \u001b[38;5;129;01min\u001b[39;00m authors[authors[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mauthor_key\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwang z\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(row[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marticle_id\u001b[39m\u001b[38;5;124m\"\u001b[39m], end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m     this_article \u001b[38;5;241m=\u001b[39m articles[articles[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marticle_id\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m row[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marticle_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'author_key'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1557 Pathogen entrapment by transglutaminase--a conserved early innate immune mechanism. PLoS pathogens 2010\n",
+      "1423 Host and pathogen glycosaminoglycan-binding proteins modulate antimicrobial peptide responses in Drosophila melanogaster. Infection and immunity 2011\n"
      ]
     }
    ],
@@ -2582,7 +2569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2616,17 +2603,59 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_49825/1556930424.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  authors[(authors[\"author_key\"] == \"wang z\") & (authors[\"article_id\"] == 1557)][\"name\"] = \"Wang Zhi\"\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_49825/1556930424.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  authors[(authors[\"author_key\"] == \"wang z\") & (authors[\"article_id\"] == 1423)][\"name\"] = \"Wang Zhipeng\"\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_49825/1556930424.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  authors[(authors[\"author_key\"] == \"zhang z\") & (authors[\"article_id\"] == 1491)][\"name\"] = \"Zhang Zhenting\"\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_49825/1556930424.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  authors[(authors[\"author_key\"] == \"zhang z\") & (authors[\"article_id\"] == 1606)][\"name\"] = \"Zhang Zhaolin\"\n"
+     ]
+    }
+   ],
    "source": [
-    "authors[(authors[\"author_key\"] == \"wang z\") & (authors[\"article_id\"] == 1557)][\"Name\"] = \"Wang Zhi\"\n",
-    "authors[(authors[\"author_key\"] == \"wang z\") & (authors[\"article_id\"] == 1423)][\"Name\"] = \"Wang Zhipeng\"\n",
-    "authors[(authors[\"author_key\"] == \"zhang z\") & (authors[\"article_id\"] == 1491)][\"Name\"] = \"Zhang Zhenting\"\n",
-    "authors[(authors[\"author_key\"] == \"zhang z\") & (authors[\"article_id\"] == 1606)][\"Name\"] = \"Zhang Zhaolin\""
+    "authors.loc[(authors[\"author_key\"] == \"wang z\") & (authors[\"article_id\"] == 1557),\"name\"] = \"Wang Zhi\"\n",
+    "authors.loc[(authors[\"author_key\"] == \"wang z\") & (authors[\"article_id\"] == 1423),\"name\"] = \"Wang Zhipeng\"\n",
+    "authors.loc[(authors[\"author_key\"] == \"zhang z\") & (authors[\"article_id\"] == 1491),\"name\"] = \"Zhang Zhenting\"\n",
+    "authors.loc[(authors[\"author_key\"] == \"zhang z\") & (authors[\"article_id\"] == 1606),\"name\"] = \"Zhang Zhaolin\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authors= preprocess_utils.build_author_key(authors, author_name_col=\"name\", key_col=\"author_key\")\n",
+    "authors = authors.apply(preprocess_utils.safe_strip)\n",
+    "authors.to_csv('preprocessed_data/authors_db.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2663,181 +2692,50 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>724</th>\n",
-       "      <td>745</td>\n",
-       "      <td>1535</td>\n",
-       "      <td>Abdelsadik A</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>Experienced</td>\n",
-       "      <td>abdelsadik a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>485</th>\n",
-       "      <td>496</td>\n",
-       "      <td>2122</td>\n",
-       "      <td>Agaisse H</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Post-doc</td>\n",
-       "      <td>Experienced</td>\n",
-       "      <td>agaisse h</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>487</th>\n",
-       "      <td>499</td>\n",
-       "      <td>1882</td>\n",
-       "      <td>Agaisse H</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Junior PI</td>\n",
-       "      <td>Experienced</td>\n",
-       "      <td>agaisse h</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>17</td>\n",
-       "      <td>2297</td>\n",
-       "      <td>Agaisse H</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Post-doc</td>\n",
-       "      <td>Experienced</td>\n",
-       "      <td>agaisse h</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>108</td>\n",
-       "      <td>1752</td>\n",
-       "      <td>Aggarwal K</td>\n",
+       "      <th>748</th>\n",
+       "      <td>783</td>\n",
+       "      <td>1491</td>\n",
+       "      <td>Zhang Z</td>\n",
        "      <td>Female</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>PhD</td>\n",
-       "      <td>Experienced</td>\n",
-       "      <td>aggarwal k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>754</th>\n",
-       "      <td>784</td>\n",
-       "      <td>1491</td>\n",
-       "      <td>Zhu S</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Junior PI</td>\n",
        "      <td>Newcomer</td>\n",
-       "      <td>zhu s</td>\n",
+       "      <td>zhang z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>740</th>\n",
-       "      <td>714</td>\n",
-       "      <td>1756</td>\n",
-       "      <td>Zhu S</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Junior PI</td>\n",
-       "      <td>Newcomer</td>\n",
-       "      <td>zhu s</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>653</th>\n",
-       "      <td>621</td>\n",
-       "      <td>1748</td>\n",
-       "      <td>Zhu S</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Senior PI</td>\n",
-       "      <td>Newcomer</td>\n",
-       "      <td>zhu s</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>588</th>\n",
-       "      <td>588</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>Zhuang ZH</td>\n",
-       "      <td>Male</td>\n",
+       "      <th>751</th>\n",
+       "      <td>766</td>\n",
+       "      <td>1606</td>\n",
+       "      <td>Zhang Z</td>\n",
+       "      <td>Female</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>PhD</td>\n",
        "      <td>Newcomer</td>\n",
-       "      <td>zhuang zh</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>68</td>\n",
-       "      <td>2049</td>\n",
-       "      <td>Zhuang ZH</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>PhD</td>\n",
-       "      <td>Newcomer</td>\n",
-       "      <td>zhuang zh</td>\n",
+       "      <td>zhang z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>797 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     author_id  article_id          name     sex  leading_author  \\\n",
-       "724        745        1535  Abdelsadik A    Male           False   \n",
-       "485        496        2122     Agaisse H    Male           False   \n",
-       "487        499        1882     Agaisse H    Male            True   \n",
-       "15          17        2297     Agaisse H    Male           False   \n",
-       "104        108        1752    Aggarwal K  Female           False   \n",
-       "..         ...         ...           ...     ...             ...   \n",
-       "754        784        1491         Zhu S    Male            True   \n",
-       "740        714        1756         Zhu S    Male            True   \n",
-       "653        621        1748         Zhu S    Male            True   \n",
-       "588        588        2025     Zhuang ZH    Male           False   \n",
-       "51          68        2049     Zhuang ZH    Male           False   \n",
+       "     author_id  article_id     name     sex  leading_author  first_author  \\\n",
+       "748        783        1491  Zhang Z  Female           False          True   \n",
+       "751        766        1606  Zhang Z  Female           False          True   \n",
        "\n",
-       "     first_author career_stage expertise_level    author_key  \n",
-       "724          True          PhD     Experienced  abdelsadik a  \n",
-       "485          True     Post-doc     Experienced     agaisse h  \n",
-       "487         False    Junior PI     Experienced     agaisse h  \n",
-       "15           True     Post-doc     Experienced     agaisse h  \n",
-       "104          True          PhD     Experienced    aggarwal k  \n",
-       "..            ...          ...             ...           ...  \n",
-       "754         False    Junior PI        Newcomer         zhu s  \n",
-       "740         False    Junior PI        Newcomer         zhu s  \n",
-       "653         False    Senior PI        Newcomer         zhu s  \n",
-       "588          True          PhD        Newcomer     zhuang zh  \n",
-       "51           True          PhD        Newcomer     zhuang zh  \n",
-       "\n",
-       "[797 rows x 9 columns]"
+       "    career_stage expertise_level author_key  \n",
+       "748          PhD        Newcomer    zhang z  \n",
+       "751          PhD        Newcomer    zhang z  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "authors= preprocess_utils.build_author_key(authors, author_name_col=\"name\", key_col=\"author_key\")\n",
-    "authors = authors.apply(preprocess_utils.safe_strip)\n",
-    "authors.to_csv('preprocessed_data/authors_db.csv', index=False)"
+    "authors[(authors[\"author_key\"] == \"zhang z\")]"
    ]
   }
  ],
